--- a/themes/hexo3/layout/index.ejs
+++ b/themes/hexo3/layout/index.ejs
@@ -27,7 +27,7 @@
     <div class="pjax">
         <article class="index">
             <%- partial('_partial/toc-ref', {index: true}) %>
-            <%- partial('indexs.md') %>
+            <%- partial('index.md') %>
         </article>
         <% if(theme.reward){%>
         <p>
